--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 remote_theme: daattali/beautiful-jekyll@6.0.1 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+include:
+  - assets/css/custom.css
