--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ remote_theme: daattali/beautiful-jekyll@6.0.1
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 site-css: "assets/css/custom.css"
+url: http://localhost:4000
